fix(form-item): remove validation when type is null; add label and content line-height and font-size styles to fix that label and content align issue, especially for multi-line input, checkbox-group, radio-group and switch

--- a/packages/theme/src/scss/components/checkbox-group/basic.scss
+++ b/packages/theme/src/scss/components/checkbox-group/basic.scss
@@ -5,6 +5,7 @@
 
 :host {
   display: inline-flex;
+  vertical-align: text-bottom;
 }
 
 @include b(checkbox-group) {
